@@ -4,6 +4,8 @@ Various build and warning nits fixed for newest GCC and Autoconf.
 
 libdwfl: Yet another prelink-related fix for another regression.
 
+elfcmp: New flag --ignore-build-id to ignore differing build ID bits.
+
 Version 0.151
 
 libdwfl: Fix for more prelink cases with separate debug file.
